first version of website

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass --watch sass/style.scss:css/style.css",
-    "compile:sass": "sass sass/style.scss css/style.comp.css",
-    "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
-    "compress:css": "sass --style=compressed css/style.prefix.css css/style.css",
-    "build:css": "npm-run-all compile:sass  prefix:css compress:css"
+    "watch:sass": "sass --watch sass/style.scss:css/style_bebe_cows.css",
+    "compile:sass": "sass sass/style.scss css/style_bebe_cows.comp.css",
+    "prefix:css": "postcss css/style_bebe_cows.comp.css --use autoprefixer -o css/style_bebe_cows.prefix.css",
+    "compress:css": "sass --style=compressed css/style_bebe_cows.prefix.css css/style_bebe_cows.css",
+    "build": "npm-run-all compile:sass  prefix:css compress:css"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.13"
   }
 }
