--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"stylelint": "stylelint \"sass/**/*.scss\"",
     "watch:sass": "sass --watch sass/style.scss:css/style_bebe_cows.css",
-    "compile:sass": "sass sass/style.scss css/style_bebe_cows.comp.css",
-    "prefix:css": "postcss css/style_bebe_cows.comp.css --use autoprefixer -o css/style_bebe_cows.prefix.css",
-    "compress:css": "sass --style=compressed css/style_bebe_cows.prefix.css css/style_bebe_cows.css",
+    "compile:sass": "sass sass/style.scss css/style.comp.css",
+    "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
+    "compress:css": "sass --style=compressed css/style.prefix.css css/style_bebe_cows.css",
     "build": "npm-run-all compile:sass  prefix:css compress:css"
   },
   "author": "",
@@ -15,7 +16,9 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "postcss-cli": "^10.1.0"
+    "postcss-cli": "^10.1.0",
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard-scss": "^7.0.1"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13"
