feat refractor bem

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
 	"stylelint": "stylelint \"sass/**/*.scss\"",
-    "watch:sass": "sass --watch sass/style.scss:css/style_bebe_cows.css",
+    "watch:sass": "sass --watch sass/style.scss:css/style_bebe-cows.css",
     "compile:sass": "sass sass/style.scss css/style.comp.css",
     "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
-    "compress:css": "sass --style=compressed css/style.prefix.css css/style_bebe_cows.css",
-    "build": "npm-run-all compile:sass  prefix:css compress:css"
+    "compress:css": "sass --style=compressed css/style.prefix.css css/style_bebe-cows.css",
+    "build:css": "npm-run-all compile:sass  prefix:css compress:css"
   },
   "author": "",
   "license": "ISC",
